# osswiz

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python.yaml  release.yaml
src/osswiz/: util.py
src/osswiz/checks/: __init__.py  fixtures.py  licenses.py
tests/: test_util.py
