[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osswiz"
version = "0.1.0"
description = "The Wizard of OSS - a tool to help you manage your open source projects"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "Adrian Rumpold", email = "a.rumpold@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["repo-review>=0.11.2"]

[tool.uv]
dev-dependencies = ["httpx>=0.27.2", "pytest>=8.3.3", "ruff>=0.6.9"]

[project.entry-points."repo_review.checks"]
osswiz = "osswiz.checks:repo_review_checks"

[project.entry-points."repo_review.fixtures"]
license_files = "osswiz.checks.fixtures:license_files"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-continue-on-failure"

[tool.ruff]
preview = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "B",
    "UP",
    "C4",
    "PYI",
    "PTH",
    "T10", # prevent stray debug breakpoints
]
ignore = [
    "E501", # Line too long
]
